Fix: Standardize & centralize the letter spacing of main headers in each view, with .page-header css

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -109,7 +109,7 @@ main {
 
 }
 
-#showdown-header {
+.page-header {
     letter-spacing: 6px;
 }
 
